# snappio_backend

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pyproject.toml  Dockerfile  Pipfile  README.md  build.sh  curl.vars  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
backend/: .env.example  asgi.py  settings.py  urls.py  wsgi.py
backend/chat/: apps.py  auth.py  consumers.py  urls.py
backend/snappio/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
